[FIX]calendar: calendar.css a caltable class + align middle the week number not to be aligned with day
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/branches/7.x@34607 b456876b-0849-0410-b77d-98878d47e9d5

--- a/css/calendar.css
+++ b/css/calendar.css
@@ -614,7 +614,7 @@ select[name=end_Minute] {
 	padding: 2px;
 }
 
-#calscreen td {
+#calscreen td.odd, #calscreen td.even {
 	vertical-align: top;
 }
 
